# sprite-render-rs

./: .gitignore  BENCH.md  Cargo.toml  README.md  build.rs
examples/: colors.txt  main.rs  many_textures.rs  multi_window.rs
src/: backends.rs  common.rs  lib.rs
src/backends/: opengl.rs  opengles.rs  webgl.rs
