[package]
name = "sprite-render"
version = "0.1.0"
authors = ["Rodrigodd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

opengl = ["raw-gl-context", "gl"]
webgl = []

[dependencies]

cfg-if = "1"
memoffset = "0.6"
winit = "0.26"
raw-window-handle = "0.3.4"
log = "0.4.14"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# raw-gl-context = { optional = true, path = "../raw-gl-context" }
raw-gl-context = { optional = true, git = "https://github.com/Rodrigodd/raw-gl-context", rev = "c8159e9d25c86610c341c1a0e45beef28ad0520b" }
gl = { version = "0.14", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'Window',
]

[dev-dependencies]

rand = "0.8"
image = "0.23"
env_logger = "0.9.0"
