[package]
name = "sprite-render"
version = "0.1.0"
authors = ["Rodrigodd"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rodrigodd/sprite-render-rs"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[package.metadata.android.uses_feature]]
opengles_version = [2,0]

[features]

opengl = ["raw-gl-context", "gl_generator"]
opengles = ["raw-gl-context", "gl_generator"]
webgl = []

[dependencies]

cfg-if = "1"
memoffset = "0.6"
winit = "0.27.2"
raw-window-handle = "0.5.0"
log = "0.4.14"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# raw-gl-context = { optional = true, path = "../raw-gl-context" }
raw-gl-context = { optional = true, git = "https://github.com/Rodrigodd/raw-gl-context", rev = "2ab0454550686ded3c6ad16b9619aa4c89c5132d" }

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
gl_generator = { version = "0.14", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'Window',
]

[dev-dependencies]

rand = "0.8"
image = "0.23"
env_logger = "0.9.0"
[target.'cfg(target_os = "android")'.dev-dependencies]
ndk-glue = { version = "0.5.0", features=["logger"] }
