[package]
name = "sprite-render"
version = "0.1.0"
authors = ["Rodrigodd"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rodrigodd/sprite-render-rs"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[package.metadata.android.uses_feature]]
opengles_version = [2, 0]

[features]

opengl = ["glutin", "gl_generator"]
opengles = ["glutin", "gl_generator"]
webgl = []

[dependencies]

cfg-if = "1.0.0"
memoffset = "0.8.0"
winit = "0.27.5"
raw-window-handle = "0.5.0"
log = "0.4.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = { version = "0.30.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
gl_generator = { version = "0.14.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"
wasm-timer = "0.2.5"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.60"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlRenderingContext',
    'WebGlUniformLocation',
    'WebGlProgram',
    'WebGlShader',
    'WebGlTexture',
    'Window',
]

[dev-dependencies]

rand = "0.8.5"
image = "0.24.5"
env_logger = "0.10.0"
[target.'cfg(target_os = "android")'.dev-dependencies]
ndk-glue = { version = "0.7.0", features = ["logger"] }

[profile.dev.package.image]
opt-level = 3
overflow-checks = false
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.flate2]
opt-level = 3
[profile.dev.package.crc32fast]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
